--- a/app/src/main/res/layout/lay_daftar_mitra_kontraktor.xml
+++ b/app/src/main/res/layout/lay_daftar_mitra_kontraktor.xml
@@ -45,7 +45,7 @@
             android:hint="Email"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:id="@+id/edtemailregmitra"
+            android:id="@+id/edtemailbu"
             android:layout_gravity="center_vertical|center_horizontal"
 
             />
@@ -74,7 +74,7 @@
             android:hint="Nama Lengkap"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:id="@+id/edtnamaRegmitra"
+            android:id="@+id/edtnamabu"
             android:layout_gravity="center_vertical|center_horizontal"
 
             />
@@ -109,7 +109,7 @@
             android:layout_gravity="center_vertical|center_horizontal"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:id="@+id/edtPasswordMitraReg"
+            android:id="@+id/edtPasswordbu"
 
 
             />
@@ -144,7 +144,7 @@
             android:layout_gravity="center_vertical|center_horizontal"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:id="@+id/edtPasswordmitraRegUlang"
+            android:id="@+id/edtPasswordbuUlang"
 
 
             />
@@ -154,9 +154,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="* Kartu Tanda Penduduk"
+        android:text="* melampirkan KTP Direktur"
         android:textColor="#fff"
-        android:editable="false"
         android:layout_marginTop="40dp"
         />
 
@@ -167,43 +166,64 @@
         android:layout_marginTop="5dp"
         android:hint="KTP"
         android:textColorHint="#fff"
-        android:id="@+id/edtktpmitra"
+        android:id="@+id/edtktpbu"
         />
+
+
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="* Kartu Keluarga"
+        android:text="* Surat Izin Usaha Perdagangan"
         android:textColor="#fff"
         android:layout_marginTop="20dp"
         />
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:drawableRight="@drawable/ic_file_upload_white_24dp"
         android:layout_marginTop="5dp"
-        android:hint="Lampiran KK"
+        android:hint="Lampiran SIUP"
         android:textColorHint="#fff"
-        android:id="@+id/edtkk"
+        android:id="@+id/edtsiup"
         />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="* Surat Keterangan Domisili"
+        android:text="* Tanda Daftar Perusahaan"
         android:textColor="#fff"
         android:layout_marginTop="20dp"
         />
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_marginTop="5dp"
         android:drawableRight="@drawable/ic_file_upload_white_24dp"
-        android:hint="Lampiran SKD"
+        android:layout_marginTop="5dp"
+        android:hint="Lampiran TDP"
         android:textColorHint="#fff"
-        android:id="@+id/edtskd"
+        android:id="@+id/edttdp"
         />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="* Nomor Wajib Pajak"
+        android:textColor="#fff"
+        android:layout_marginTop="20dp"
+        />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:drawableRight="@drawable/ic_file_upload_white_24dp"
+        android:layout_marginTop="5dp"
+        android:hint="Lampiran NPWP"
+        android:textColorHint="#fff"
+        android:id="@+id/edtnpwp"
+        />
 
 
     <Button
@@ -213,7 +233,7 @@
         android:background="@drawable/button_login"
         android:layout_gravity="center_vertical|center_horizontal"
         android:text="Daftar"
-        android:id="@+id/btnDaftarmitra"
+        android:id="@+id/btnDaftarBu"
         android:textColor="#fff"
 
         />
@@ -240,7 +260,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Masuk"
-        android:id="@+id/txtMasukmitra"
+        android:id="@+id/txtMasukbu"
         android:textColor="@color/Biru"
         android:textSize="15sp"
         android:layout_gravity="center_vertical|center_horizontal"
