--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,19 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/text_home"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@drawable/backgroundkonsumen"
+    android:fillViewport="true"
+    >
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+
+    >
+
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="150dp"
+        android:id="@+id/layout_top"
+        tools:ignore="MissingConstraints"
+        tools:context=".Konsumen.HomeKonsumenActivity"
+        >
+
+       <FrameLayout
+           android:layout_width="match_parent"
+           android:layout_height="match_parent">
+
+        <com.Rapidid.id.ImageSlider.SliderView
+            android:id="@+id/sliderView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+
+       </FrameLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+
+        <LinearLayout
+            android:id="@+id/pagesContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="8dp"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal"/>
+
+    </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/imgob"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:src="@drawable/iconob"
+        tools:ignore="MissingConstraints"
+
+        tools:layout_editor_absoluteX="23dp"
+        tools:layout_editor_absoluteY="540dp" />
+
+    <ImageView
+        android:id="@+id/imgrenov"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:src="@drawable/iconrenov"
+        tools:ignore="MissingConstraints"
+
+        tools:layout_editor_absoluteX="117dp"
+        tools:layout_editor_absoluteY="540dp" />
+
+    <ImageView
+        android:id="@+id/imgac"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:src="@drawable/iconac"
+        tools:ignore="MissingConstraints"
+
+        tools:layout_editor_absoluteX="219dp"
+        tools:layout_editor_absoluteY="540dp" />
+
+    <ImageView
+        android:id="@+id/imgrumah"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:src="@drawable/iconhome"
+        tools:ignore="MissingConstraints"
+
+        tools:layout_editor_absoluteX="315dp"
+        tools:layout_editor_absoluteY="540dp" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
