--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="Biru">#47acf5</color>
     <color name="Putih">#fff</color>
     <color name="Hijau">#72f29b</color>
+    <color name="kuning">#FFEB3B</color>
 
     <color name="colorNavigationIcon">#dae9f6</color>
     <color name="colorNavigationText">#ffffff</color>
