--- a/app/src/main/res/layout/lay_daftar_konsumen.xml
+++ b/app/src/main/res/layout/lay_daftar_konsumen.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/backgroundkonsumen"
+    android:background="@drawable/backgroundkonsumenn"
     >
 <LinearLayout
     android:orientation="vertical"
@@ -16,7 +16,7 @@
         android:layout_width="200dp"
         android:layout_marginTop="30dp"
         android:layout_height="200dp"
-        android:src="@drawable/logorapihputih"
+        android:src="@drawable/logorapihbiru"
         android:layout_gravity="center_horizontal"
 
         />
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         app:hintTextAppearance="@style/TextLabel"
         android:id="@+id/namakonsumen"
-        android:textColorHint="#fff"
+        android:textColorHint="#1d26d4"
         android:layout_centerVertical="true"
         android:layout_marginBottom="@dimen/floating_hint_margin"
         android:layout_gravity="center_vertical|center_horizontal"
@@ -38,7 +38,7 @@
 
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:textColor="#fff"
+            android:textColor="#1d26d4"
             android:layout_marginTop="@dimen/floating_hint_margin"
             android:hint="Nama"
             android:layout_centerHorizontal="true"
@@ -55,7 +55,7 @@
         android:layout_height="wrap_content"
         app:hintTextAppearance="@style/TextLabel"
         android:id="@+id/email"
-        android:textColorHint="#fff"
+        android:textColorHint="#1d26d4"
         android:layout_centerVertical="true"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="@dimen/floating_hint_margin"
@@ -68,7 +68,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:inputType="textEmailAddress"
-            android:textColor="#fff"
+            android:textColor="#1d26d4"
             android:layout_marginTop="@dimen/floating_hint_margin"
             android:hint="Email"
             android:layout_centerHorizontal="true"
@@ -85,9 +85,9 @@
         android:layout_height="wrap_content"
         app:hintTextAppearance="@style/TextLabel"
         android:id="@+id/password"
-        android:textColorHint="#fff"
+        android:textColorHint="#1d26d4"
         app:passwordToggleEnabled="true"
-        app:passwordToggleTint="#fff"
+        app:passwordToggleTint="#1d26d4"
         android:layout_below="@+id/email"
         android:layout_marginTop="30dp"
         android:layout_gravity="center_vertical|center_horizontal"
@@ -102,7 +102,7 @@
             android:layout_marginTop="@dimen/floating_hint_margin"
             android:top="50dp"
             android:inputType="textPassword"
-            android:textColor="#fff"
+            android:textColor="#1d26d4"
             android:hint="Password"
             android:layout_gravity="center_vertical|center_horizontal"
             android:layout_centerHorizontal="true"
@@ -117,10 +117,10 @@
     <com.google.android.material.textfield.TextInputLayout
 
         android:layout_width="match_parent"
-        android:textColorHint="#fff"
+        android:textColorHint="#1d26d4"
         android:layout_height="wrap_content"
         app:passwordToggleEnabled="true"
-        app:passwordToggleTint="#fff"
+        app:passwordToggleTint="#1d26d4"
         app:hintTextAppearance="@style/TextLabel"
         android:id="@+id/ulangipassword"
         android:layout_below="@+id/email"
@@ -137,7 +137,7 @@
             android:layout_marginTop="@dimen/floating_hint_margin"
             android:top="50dp"
             android:inputType="textPassword"
-            android:textColor="#fff"
+            android:textColor="#1d26d4"
             android:hint="Ulangi Password"
             android:layout_gravity="center_vertical|center_horizontal"
             android:layout_centerHorizontal="true"
@@ -174,7 +174,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sudah punya akun? "
-        android:textColor="#fff"
+        android:textColor="#1d26d4"
         android:textSize="20sp"
         android:id="@+id/txtinfo"
         android:layout_gravity="center_vertical|center_horizontal"
