--- a/app/src/main/res/layout/lay_daftar_mitra_kontraktor.xml
+++ b/app/src/main/res/layout/lay_daftar_mitra_kontraktor.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/backgroundmitra"
+    android:background="@drawable/backgroundmitraa"
     >
 <LinearLayout
     android:orientation="vertical"
@@ -16,7 +16,7 @@
         android:layout_width="200dp"
         android:layout_marginTop="30dp"
         android:layout_height="200dp"
-        android:src="@drawable/logorapihputih"
+        android:src="@drawable/logorapihbiru"
         android:layout_gravity="center_horizontal"
 
         />
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         app:hintTextAppearance="@style/TextLabel"
         android:id="@+id/email"
-        android:textColorHint="#fff"
+        android:textColorHint="#1d26d4"
         android:layout_centerVertical="true"
         android:layout_marginBottom="@dimen/floating_hint_margin"
         android:layout_gravity="center_vertical|center_horizontal"
@@ -39,7 +39,7 @@
 
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:textColor="#fff"
+            android:textColor="#1d26d4"
             android:layout_marginTop="@dimen/floating_hint_margin"
             android:inputType="textEmailAddress"
             android:hint="Email"
@@ -58,7 +58,7 @@
         app:hintTextAppearance="@style/TextLabel"
         android:layout_marginTop="20dp"
         android:id="@+id/namamitra"
-        android:textColorHint="#fff"
+        android:textColorHint="#1d26d4"
         android:layout_centerVertical="true"
         android:layout_marginBottom="@dimen/floating_hint_margin"
         android:layout_gravity="center_vertical|center_horizontal"
@@ -69,7 +69,7 @@
 
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:textColor="#fff"
+            android:textColor="#1d26d4"
             android:layout_marginTop="@dimen/floating_hint_margin"
             android:hint="Nama Lengkap"
             android:layout_centerHorizontal="true"
@@ -87,9 +87,9 @@
         android:layout_height="wrap_content"
         app:hintTextAppearance="@style/TextLabel"
         android:id="@+id/password"
-        android:textColorHint="#fff"
+        android:textColorHint="#1d26d4"
         app:passwordToggleEnabled="true"
-        app:passwordToggleTint="#fff"
+        app:passwordToggleTint="#1d26d4"
         android:layout_below="@+id/email"
         android:layout_marginTop="20dp"
         android:layout_gravity="center_vertical|center_horizontal"
@@ -104,7 +104,7 @@
             android:layout_marginTop="@dimen/floating_hint_margin"
             android:top="50dp"
             android:inputType="textPassword"
-            android:textColor="#fff"
+            android:textColor="#1d26d4"
             android:hint="Password"
             android:layout_gravity="center_vertical|center_horizontal"
             android:layout_centerHorizontal="true"
@@ -119,10 +119,10 @@
     <com.google.android.material.textfield.TextInputLayout
 
         android:layout_width="match_parent"
-        android:textColorHint="#fff"
+        android:textColorHint="#1d26d4"
         android:layout_height="wrap_content"
         app:passwordToggleEnabled="true"
-        app:passwordToggleTint="#fff"
+        app:passwordToggleTint="#1d26d4"
         app:hintTextAppearance="@style/TextLabel"
         android:id="@+id/ulangipassword"
         android:layout_below="@+id/email"
@@ -139,7 +139,7 @@
             android:layout_marginTop="@dimen/floating_hint_margin"
             android:top="50dp"
             android:inputType="textPassword"
-            android:textColor="#fff"
+            android:textColor="#1d26d4"
             android:hint="Ulangi Password"
             android:layout_gravity="center_vertical|center_horizontal"
             android:layout_centerHorizontal="true"
@@ -155,7 +155,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="* melampirkan KTP Direktur"
-        android:textColor="#fff"
+        android:textColor="#1d26d4"
         android:layout_marginTop="40dp"
         />
 
@@ -165,7 +165,7 @@
         android:drawableRight="@drawable/ic_file_upload_white_24dp"
         android:layout_marginTop="5dp"
         android:hint="KTP"
-        android:textColorHint="#fff"
+        android:textColorHint="#1d26d4"
         android:id="@+id/edtktpbu"
         />
 
@@ -175,7 +175,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="* Surat Izin Usaha Perdagangan"
-        android:textColor="#fff"
+        android:textColor="#1d26d4"
         android:layout_marginTop="20dp"
         />
 
@@ -185,7 +185,7 @@
         android:drawableRight="@drawable/ic_file_upload_white_24dp"
         android:layout_marginTop="5dp"
         android:hint="Lampiran SIUP"
-        android:textColorHint="#fff"
+        android:textColorHint="#1d26d4"
         android:id="@+id/edtsiup"
         />
 
@@ -193,7 +193,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="* Tanda Daftar Perusahaan"
-        android:textColor="#fff"
+        android:textColor="#1d26d4"
         android:layout_marginTop="20dp"
         />
 
@@ -203,7 +203,7 @@
         android:drawableRight="@drawable/ic_file_upload_white_24dp"
         android:layout_marginTop="5dp"
         android:hint="Lampiran TDP"
-        android:textColorHint="#fff"
+        android:textColorHint="#1d26d4"
         android:id="@+id/edttdp"
         />
 
@@ -211,7 +211,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="* Nomor Wajib Pajak"
-        android:textColor="#fff"
+        android:textColor="#1d26d4"
         android:layout_marginTop="20dp"
         />
 
@@ -221,7 +221,7 @@
         android:drawableRight="@drawable/ic_file_upload_white_24dp"
         android:layout_marginTop="5dp"
         android:hint="Lampiran NPWP"
-        android:textColorHint="#fff"
+        android:textColorHint="#1d26d4"
         android:id="@+id/edtnpwp"
         />
 
@@ -250,7 +250,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sudah punya akun? "
-        android:textColor="#fff"
+        android:textColor="#1d26d4"
         android:textSize="20sp"
         android:id="@+id/txtinfo"
         android:layout_gravity="center_vertical|center_horizontal"
