--- a/app/src/main/res/layout/lay_komfirmasi_pesanan_konsumen.xml
+++ b/app/src/main/res/layout/lay_komfirmasi_pesanan_konsumen.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgroundkonsumen">
+    android:background="@drawable/backgroundkonsumenn">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,7 +34,7 @@
                 android:text="email"
                 android:layout_gravity="bottom"
                 android:id="@+id/txtemailkonsumenrenovOrder"
-                android:textColor="#fff"
+                android:textColor="#1d26d4"
                 android:layout_marginStart="10dp"
                 android:layout_weight="10"
                 />
@@ -44,7 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Komfirmasi Pesanan !"
-            android:textColor="@color/kuning"
+            android:textColor="@color/colorAccent"
             android:id="@+id/txtJdlPsn"
             android:layout_gravity="center"
             android:layout_marginTop="30dp"
@@ -58,7 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Jenis Properti :"
-            android:textColor="@color/Putih"
+            android:textColor="#1d26d4"
             android:layout_marginTop="30dp"
             android:textSize="15sp"
             android:layout_weight="1"
@@ -70,7 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Waktu Pengerjaan :"
-        android:textColor="@color/Putih"
+        android:textColor="#1d26d4"
         android:layout_marginTop="30dp"
         android:textSize="15sp"
         android:layout_weight="1"
@@ -87,7 +87,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="text"
-                android:textColor="@color/kuning"
+                android:textColor="@color/colorAccent"
                 android:layout_marginTop="30dp"
                 android:textSize="15sp"
                 android:layout_weight="1"
@@ -99,7 +99,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="text"
-                android:textColor="@color/kuning"
+                android:textColor="@color/colorAccent"
                 android:layout_marginTop="30dp"
                 android:textSize="15sp"
                 android:layout_weight="1"
@@ -119,7 +119,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Domisili Proyek"
-                android:textColor="@color/Putih"
+                android:textColor="#1d26d4"
                 android:layout_marginTop="30dp"
                 android:textSize="15sp"
                 android:textAlignment="center"
@@ -129,7 +129,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="domisili"
-                android:textColor="@color/kuning"
+                android:textColor="@color/colorAccent"
                 android:layout_marginTop="30dp"
                 android:textSize="15sp"
                 android:layout_weight="0.5"
@@ -150,8 +150,8 @@
             android:layout_height="wrap_content"
             app:hintTextAppearance="@style/TextLabel"
             android:id="@+id/maps"
-            android:textColorHint="#fff"
-            android:layout_marginTop="20dp"
+            android:textColorHint="#1d26d4"
+            android:layout_marginTop="30dp"
             android:layout_centerVertical="true"
             android:layout_marginBottom="@dimen/floating_hint_margin"
             android:layout_gravity="center_vertical|center_horizontal"
@@ -168,7 +168,7 @@
                 android:layout_gravity="center_vertical|center_horizontal"
                 android:layout_marginTop="@dimen/floating_hint_margin"
                 android:hint="Lokasi Proyek Anda"
-                android:textColor="#fff"
+                android:textColor="#1d26d4"
 
                 />
         </com.google.android.material.textfield.TextInputLayout>
@@ -184,7 +184,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Alamat lengkap"
-                android:textColor="@color/Putih"
+                android:textColor="#1d26d4"
                 android:layout_marginTop="30dp"
                 android:textSize="15sp"
                 android:textAlignment="center"
@@ -194,7 +194,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="alamat"
-                android:textColor="@color/kuning"
+                android:textColor="@color/colorAccent"
                 android:layout_marginTop="30dp"
                 android:textSize="15sp"
                 android:layout_weight="0.5"
@@ -215,7 +215,7 @@
             android:layout_weight="1"
             android:text="Detail Pekerjaan :"
             android:textAlignment="center"
-            android:textColor="@color/Putih"
+            android:textColor="#1d26d4"
             android:textSize="15sp"
 
             />
@@ -224,7 +224,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="text"
-            android:textColor="@color/kuning"
+            android:textColor="@color/colorAccent"
             android:layout_marginTop="5dp"
             android:textSize="15sp"
             android:id="@+id/txtDetailPekerjaan"
@@ -245,7 +245,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Harga Pengerjaan Proyek"
-                android:textColor="@color/Putih"
+                android:textColor="#1d26d4"
                 android:layout_marginTop="30dp"
                 android:textSize="15sp"
                 android:textAlignment="center"
@@ -255,7 +255,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Rp."
-                android:textColor="@color/kuning"
+                android:textColor="@color/colorAccent"
                 android:layout_marginTop="30dp"
                 android:textSize="15sp"
                 android:layout_weight="0.5"
@@ -272,8 +272,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="* Gambar Properti"
-            android:textColor="#fff"
+            android:text="* lampirkan gambar jika ada"
+            android:textColor="#1d26d4"
             android:layout_marginTop="30dp"
             />
         <EditText
@@ -281,8 +281,8 @@
             android:layout_height="60dp"
 
             android:drawableRight="@drawable/ic_file_upload_white_24dp"
-            android:hint="Lampiran Gambar Property"
-            android:textColorHint="#fff"
+            android:hint="Lampiran Gambar Properti"
+            android:textColorHint="#1d26d4"
             android:id="@+id/edtgambarproperti"
             />
 
@@ -294,7 +294,7 @@
             android:background="@drawable/button_login"
             android:layout_marginTop="40dp"
             android:text="Ajukan Projek"
-            android:textColor="@color/Putih"
+            android:textColor="#fff"
 
             />
 
