--- a/app/src/main/res/layout/lay_login_konsumen.xml
+++ b/app/src/main/res/layout/lay_login_konsumen.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/backgroundkonsumen"
+    android:background="@drawable/backgroundkonsumenn"
     >
 <LinearLayout
     android:orientation="vertical"
@@ -16,7 +16,7 @@
         android:layout_width="200dp"
         android:layout_marginTop="30dp"
         android:layout_height="200dp"
-        android:src="@drawable/logorapihputih"
+        android:src="@drawable/logorapihbiru"
         android:layout_gravity="center_horizontal"
 
         />
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         app:hintTextAppearance="@style/TextLabel"
         android:id="@+id/email"
-        android:textColorHint="#fff"
+        android:textColorHint="#1d26d4"
         android:layout_marginTop="30dp"
         android:layout_centerVertical="true"
         android:layout_marginBottom="@dimen/floating_hint_margin"
@@ -41,7 +41,7 @@
 
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:textColor="#fff"
+            android:textColor="#1d26d4"
             android:inputType="textEmailAddress"
             android:layout_marginTop="@dimen/floating_hint_margin"
             android:hint="Email"
@@ -60,10 +60,10 @@
         android:layout_height="wrap_content"
         app:hintTextAppearance="@style/TextLabel"
         android:id="@+id/password"
-        android:textColorHint="#fff"
+        android:textColorHint="#1d26d4"
         android:layout_below="@+id/email"
         app:passwordToggleEnabled="true"
-        app:passwordToggleTint="#fff"
+        app:passwordToggleTint="#1d26d4"
         android:layout_marginTop="30dp"
         android:layout_gravity="center_vertical|center_horizontal"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -78,7 +78,7 @@
             android:layout_marginTop="@dimen/floating_hint_margin"
             android:top="50dp"
             android:inputType="textPassword"
-            android:textColor="#fff"
+            android:textColor="#1d26d4"
             android:hint="Password"
             android:layout_gravity="center_vertical|center_horizontal"
             android:layout_centerHorizontal="true"
@@ -114,7 +114,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Belum punya akun? "
-        android:textColor="#fff"
+        android:textColor="#1d26d4"
         android:textSize="20sp"
         android:id="@+id/txtinfo"
         android:layout_gravity="center_vertical|center_horizontal"
