--- a/app/src/main/res/layout/lay_pilihan.xml
+++ b/app/src/main/res/layout/lay_pilihan.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgroundpilihan"
+    android:background="@drawable/backgroundkonsumenn"
 
     >
 
@@ -15,12 +15,13 @@
         android:layout_marginTop="40dp"
         />
 
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Selamat datang diaplikasi Rapih.id \n Silahkan mulai dengan pencarian anda"
         android:textSize="20sp"
-        android:textColor="#ede740"
+        android:textColor="#1d26d4"
         android:textAlignment="center"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
@@ -34,7 +35,7 @@
         android:layout_below="@+id/txtinfo1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
-        android:textColor="#ede740"
+        android:textColor="#1d26d4"
         android:textAlignment="center"
         android:id="@+id/txtinfo2"
         />
