--- a/app/src/main/res/layout/lay_renovrumah_konsumen.xml
+++ b/app/src/main/res/layout/lay_renovrumah_konsumen.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgroundkonsumen">
+    android:background="@drawable/backgroundkonsumenn">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,7 +34,7 @@
             android:text="email"
             android:layout_gravity="bottom"
             android:id="@+id/txtemailkonsumenrenov"
-            android:textColor="#fff"
+            android:textColor="#1d26d4"
             android:layout_marginStart="10dp"
             android:layout_weight="10"
             />
@@ -46,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Jenis Properti"
-            android:textColor="#fff"
+            android:textColor="#1d26d4"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
             android:textSize="15sp"
@@ -59,8 +59,8 @@
            android:id="@+id/spinRenov"
            android:layout_margin="20dp"
            android:entries="@array/properti"
-           android:outlineAmbientShadowColor="#fff"
-           android:outlineSpotShadowColor="#fff"
+           android:outlineAmbientShadowColor="#1d26d4"
+           android:outlineSpotShadowColor="#1d26d4"
 
            />
 
@@ -70,7 +70,7 @@
             android:layout_height="wrap_content"
             app:hintTextAppearance="@style/TextLabel"
             android:id="@+id/desPekerjaan"
-            android:textColorHint="#fff"
+            android:textColorHint="#1d26d4"
             android:layout_marginTop="20dp"
             android:layout_centerVertical="true"
             android:layout_marginBottom="@dimen/floating_hint_margin"
@@ -82,7 +82,7 @@
 
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:textColor="#fff"
+                android:textColor="#1d26d4"
                 android:layout_marginTop="@dimen/floating_hint_margin"
                 android:hint="Deskripsi Pekerjaan"
                 android:layout_centerHorizontal="true"
@@ -99,7 +99,7 @@
             android:layout_height="wrap_content"
             app:hintTextAppearance="@style/TextLabel"
             android:id="@+id/edttgl"
-            android:textColorHint="#fff"
+            android:textColorHint="#1d26d4"
             android:layout_marginTop="20dp"
             android:layout_centerVertical="true"
             android:layout_marginBottom="@dimen/floating_hint_margin"
@@ -111,7 +111,7 @@
 
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:textColor="#fff"
+                android:textColor="#1d26d4"
                 android:layout_marginTop="@dimen/floating_hint_margin"
                 android:hint="Estimasi Proyek Dimulai"
                 android:layout_centerHorizontal="true"
@@ -133,7 +133,7 @@
             android:layout_height="wrap_content"
             app:hintTextAppearance="@style/TextLabel"
             android:id="@+id/edtuang"
-            android:textColorHint="#fff"
+            android:textColorHint="#1d26d4"
             android:layout_marginTop="20dp"
             android:layout_centerVertical="true"
             android:layout_marginBottom="@dimen/floating_hint_margin"
@@ -153,7 +153,7 @@
                 android:layout_gravity="center_vertical|center_horizontal"
                 android:layout_marginTop="@dimen/floating_hint_margin"
                 android:hint="Estimasi Anggaran Proyek"
-                android:textColor="#fff"
+                android:textColor="#1d26d4"
 
                 />
 
@@ -170,7 +170,7 @@
             android:layout_height="wrap_content"
             app:hintTextAppearance="@style/TextLabel"
             android:id="@+id/maps"
-            android:textColorHint="#fff"
+            android:textColorHint="#1d26d4"
             android:layout_marginTop="20dp"
             android:layout_centerVertical="true"
             android:layout_marginBottom="@dimen/floating_hint_margin"
@@ -188,7 +188,7 @@
                 android:layout_gravity="center_vertical|center_horizontal"
                 android:layout_marginTop="@dimen/floating_hint_margin"
                 android:hint="Pilih Lokasi Proyek"
-                android:textColor="#fff"
+                android:textColor="#1d26d4"
 
                 />
         </com.google.android.material.textfield.TextInputLayout>
@@ -199,8 +199,8 @@
             android:id="@+id/spinLokasi"
             android:layout_margin="20dp"
             android:entries="@array/domisili"
-            android:outlineAmbientShadowColor="#fff"
-            android:outlineSpotShadowColor="#fff"
+            android:outlineAmbientShadowColor="#1d26d4"
+            android:outlineSpotShadowColor="#1d26d4"
 
             />
 
@@ -210,7 +210,7 @@
             android:layout_height="wrap_content"
             app:hintTextAppearance="@style/TextLabel"
             android:id="@+id/deslokasi"
-            android:textColorHint="#fff"
+            android:textColorHint="#1d26d4"
             android:layout_marginTop="20dp"
             android:layout_centerVertical="true"
             android:layout_marginBottom="@dimen/floating_hint_margin"
@@ -228,7 +228,7 @@
                 android:layout_gravity="center_vertical|center_horizontal"
                 android:layout_marginTop="@dimen/floating_hint_margin"
                 android:hint="Deskripsi alamat"
-                android:textColor="#fff"
+                android:textColor="#1d26d4"
 
                 />
         </com.google.android.material.textfield.TextInputLayout>
